# QuantumThreatTracker

./: .buildinfo  .gitignore  CITATION.cff  LICENSE  README.md  background.html  genindex.html  index.html  lifespan_estimator.html  objects.inv  optimizer.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  spec_req_estimator.html  test_ruff.py
.doctrees/: background.doctree  environment.pickle  index.doctree  lifespan_estimator.doctree  optimizer.doctree  spec_req_estimator.doctree
.doctrees/algorithms/: algorithms.doctree  index.doctree  lister.doctree
.doctrees/algorithms/crypto_attacks/: dlog.doctree  ecc.doctree  index.doctree  rsa.doctree
.github/workflows/: ci.yml  docs.yml  pytest.yml  ruff.yml
_modules/: index.html
_modules/quantumthreattracker/algorithms/: algorithm_lister.html  quantum_algorithm.html
_modules/quantumthreattracker/algorithms/dlog/: dlog_safe_prime_eh.html  dlog_safe_prime_shor.html  dlog_schnorr_eh.html  dlog_schnorr_shor.html
_modules/quantumthreattracker/lifespan_estimator/: hardware_roadmap.html  lifespan_estimator.html
_modules/quantumthreattracker/optimizer/: algorithm_optimizer.html
_modules/quantumthreattracker/spec_req_estimator/: spec_req_estimator.html
_sources/: index.rst.txt  spec_req_estimator.rst.txt
_sources/algorithms/: lister.rst.txt
_sources/algorithms/crypto_attacks/: ecc.rst.txt  index.rst.txt  rsa.rst.txt
algorithms/: algorithms.html  index.html  lister.html
algorithms/crypto_attacks/: dlog.html  ecc.html  index.html  rsa.html
data/hardware_roadmaps/: sample_hardware_roadmap.json
data/threat_reports/: sample_threat_report.json  sample_threat_report_detail=0.json  sample_threat_report_detail=1.json  sample_threat_report_detail=2.json  sample_threat_report_detail=3.json
docs/source/: background.rst  conf.py  index.rst  lifespan_estimator.rst  optimizer.rst
docs/source/algorithms/: algorithms.rst  index.rst
notebooks/: README.md  advanced_plotting.ipynb  baseline_ecc_demo.ipynb  baseline_shor_demo.ipynb  baseline_shor_qualtran.ipynb  chevingard_demo.ipynb  dlog_demo.ipynb  gidney_ekera.ipynb  lifespan_estimator_demo.ipynb  qre_pipeline_demo.ipynb  qre_pipeline_demo_ccz.ipynb  qtt_demo.ipynb  spec_req_estimator_demo.ipynb
notebooks/demos/: 1_qtt_usage.ipynb  2_plotting_threat_over_time.ipynb  3_spec_req_estimation.ipynb
notebooks/development/: README.md  baseline_ecc.ipynb  chevingard.ipynb  gidney_ekera.ipynb
src/quantumthreattracker/algorithms/: __init__.py  algorithm_lister.py  baseline_shor.py  ecc_basic.py  gidney_ekera.py  gidney_ekera_advanced.py  gidney_ekera_basic.py  quantum_algorithm.py  utils.py
src/quantumthreattracker/lifespan_estimator/: __init__.py  hardware_roadmap.py  lifespan_estimator.py
src/quantumthreattracker/optimizer/: __init__.py  algorithm_optimizer.py
src/quantumthreattracker/resource_estimation/: __init__.py
src/quantumthreattracker/spec_req_estimator/: __init__.py  spec_req_estimator.py
tests/algorithms/: test_algorithm_lister.py  test_baseline_shor.py  test_dlog.py  test_ecc_basic.py  test_gidney_ekera.py  test_gidney_ekera_basic.py  test_litinski_ecc.py  test_quantum_algorithm.py
tests/optimizer/: test_algorithm_optimizer.py
(+32 files in other folders)
