[project]
name = "quantumthreattracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.3",
    "pylatexenc>=2.10",
    "qiskit>=1.3.0",
    "qsharp-widgets>=1.11.1",
    "qsharp>=1.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantumthreattracker"]
