[project]
name = "quantumthreattracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.3",
    "pylatexenc>=2.10",
    "qiskit>=1.3.0",
    "qsharp-widgets>=1.11.1",
    "qsharp>=1.11.1",
    "ruff>=0.8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantumthreattracker"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# Enable flake8 (Pyflakes + pycodestyle), pep8-naming, flake8-bugbear, pylint 
# and check for unused error suppression 
select = ["D", "F", "E", "W", "N", "B", "PL", "RUF100", "I"]

# Ignore too many argument errors, and the opinionated flake8-bugbear rules
ignore = ["PLR0912","PLR0913", "PLR0914", "B901", "B904", "B905", "B909", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
# Ignore unused imports in these files
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.lint.pycodestyle]
max-line-length = 120
max-doc-length = 88

[tool.ruff.lint.pydocstyle]
convention = "numpy"