[project]
name = "quantumthreattracker"
version = "0.1.0"
description = "A Python library for analysing the quantum threat posed by Shor's algorithm against cryptographic systems."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "University of Edinburgh" },
    { name = "Cambridge Consultants" },
]
license = "MIT"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.3",
    "pylatexenc>=2.10",
    "qiskit>=1.3.0",
    "qsharp-widgets>=1.11.1",
    "qsharp>=1.11.1",
    "ruff>=0.8.3",
    "qualtran>=0.5.0",
    "pytest>=8.3.4",
    "sphinx>=8.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantumthreattracker"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# Enable flake8 (Pyflakes + pycodestyle), pep8-naming, flake8-bugbear, pylint 
# and check for unused error suppression 
select = ["ANN", "D", "F", "E", "W", "N", "B", "PERF", "DOC", "PL", "RUF", "I"]
preview = true

# Ignore too many argument errors, and the opinionated flake8-bugbear rules
ignore = ["PLR0912","PLR0913", "PLR0914", "B901", "B904", "B905", "B909", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
# Ignore unused imports in these files
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.lint.pycodestyle]
max-line-length = 120
max-doc-length = 88

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true